--- a/src/screens/Home/styles.css
+++ b/src/screens/Home/styles.css
@@ -352,7 +352,7 @@
     }
 
     .touch.a {
-      background: #2563eb;
+      background: #bff205;
       border: 1px solid #33333399;
       box-shadow: rgba(0, 0, 0, 0.5) 4px 4px 12px;
 
@@ -387,13 +387,13 @@
       font-size: 13px;
 
       span {
-        color: #2563eb;
+        color: #bff205;
       }
     }
 
     h1 {
       font-size: 45px;
-      max-width: 700px;
+      max-width: 720px;
       margin-top: 10px;
       text-align: center;
       font-weight: 600;
@@ -402,7 +402,7 @@
       -webkit-text-fill-color: transparent;
 
       .s2 {
-        background: #2563eb;
+        background: #bff205;
         background-clip: text;
         -webkit-text-fill-color: transparent;
       }
@@ -526,7 +526,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                background: #2563eb;
+                background: #bff205;
                 border: 1px solid #33333399;
                 padding: 0px 15px;
                 border-radius: 15px;
@@ -549,7 +549,7 @@
                 max-width: 700px;
                 margin-top: 10px;
                 font-weight: 600;
-                color: #2563eb;
+                color: #bff205;
               }
             }
 
@@ -579,7 +579,7 @@
                 align-items: center;
                 padding: 5px;
                 border-radius: 100px;
-                background: #2563eb;
+                background: #bff205;
                 margin-right: 10px;
               }
 
@@ -602,11 +602,11 @@
           height: 40px;
           border-radius: 100px;
           background: #222222ea;
-          border: 1px solid #2563eb;
+          border: 1px solid #bff205;
           height: 40px;
           font-size: 13px;
           font-weight: 700;
-          color: #2563eb;
+          color: #bff205;
           margin-top: 25px;
           cursor: pointer;
           transition-duration: 0.15s;
@@ -618,13 +618,220 @@
 
         .buy.a,
         .buy:hover {
-          background: #2563eb;
+          background: #bff205;
           color: #333333;
           border: 1px solid #33333399;
         }
 
         .box.a {
           opacity: 1;
+        }
+      }
+    }
+  }
+}
+
+/* SHOWCASE */
+.showcase {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+  margin-top: 20px;
+  margin-bottom: 30px;
+
+  .main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 800px;
+
+    .text {
+      width: 800px;
+
+      h1 {
+        font-size: 44px;
+        max-width: 800px;
+        margin-top: 10px;
+        text-align: left;
+        font-weight: 600;
+        margin-bottom: 20px;
+        background: linear-gradient(90deg, #b0b0b0, #ffffff, #323232);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+        span {
+          background: #bff205;
+          background-clip: text;
+          -webkit-text-fill-color: transparent;
+        }
+      }
+
+      p {
+        font-size: 13px;
+        width: 650px;
+        color: #868585;
+        text-align: left;
+        margin-bottom: 20px;
+        border-left: 2px solid #bff205;
+        padding-left: 15px;
+        margin: 25px 0px;
+      }
+    }
+
+    .main-boxs {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      width: 800px;
+
+      .box {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: row;
+        margin-bottom: 15px;
+
+        .icon {
+          /* background: linear-gradient(
+            90deg,
+            rgba(16, 16, 16, 0.32),
+            rgb(61, 61, 61),
+            rgb(16, 16, 16)
+          );
+          
+          border: 1px solid #33333399;
+          box-shadow: rgba(0, 0, 0, 0.281) 4px 4px 12px; */
+          background: #bff205;
+          padding: 7px;
+          border-radius: 100px;
+          margin-right: 20px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: 10px;
+        }
+
+        .text-box {
+          display: flex;
+          flex-direction: column;
+          margin-bottom: 10px;
+
+          h1 {
+            font-size: 20px;
+            max-width: 720px;
+            margin-top: 10px;
+            font-weight: 600;
+            background: linear-gradient(90deg, #b0b0b0, #ffffff, #323232);
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+          }
+
+          p {
+            margin-top: 10px;
+            font-size: 13px;
+            width: 270px;
+            color: #868585;
+            text-align: left;
+          }
+        }
+      }
+    }
+  }
+
+  .videos {
+    display: flex;
+    flex-direction: row;
+    margin-top: 30px;
+
+    .video {
+      width: 420px;
+      height: 400px;
+      border-radius: 20px;
+      background: #222222ea;
+      border: 2px solid #33333370;
+      margin: 0px 10px;
+
+      .vd {
+        width: 100%;
+        height: 234px;
+        border-radius: 20px 20px 0px 0px;
+        overflow: hidden;
+
+        iframe {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      .text-yt {
+        display: flex;
+        flex-direction: column;
+        margin-left: 10px;
+
+        h1 {
+          font-size: 17px;
+          margin-top: 15px;
+          background: linear-gradient(90deg, #b0b0b0, #ffffff, #323232);
+          background-clip: text;
+          -webkit-text-fill-color: transparent;
+        }
+
+        p {
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          margin-top: 10px;
+          font-size: 13px;
+          width:95%;
+          color: #868585;
+          text-align: left;
+        }
+
+        .inform {
+          display: flex;
+          padding-right: 20px;
+          flex-direction: row;
+          margin-top: 20px;
+
+          .category {
+            display: flex;
+            width: 200px;
+            height: 40px;
+            border-radius: 100px;
+            background: #33333391;
+            border: 2px solid #33333399;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            h2 {
+              font-weight: 500;
+              font-size: 13px;
+              margin-left: 10px;
+              color: #fff;
+            }
+          }
+
+          .view {
+            display: flex;
+            width: 120px;
+            height: 40px;
+            border-radius: 100px;
+            background: #bff205ad;
+            border: 1px solid #33333399;
+            box-shadow: #00000080 4px 4px 12px;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            font-weight: bold;
+            font-size: 13px;
+            color: #101010;
+            opacity: 0.5;
+            margin: 0px 10px;
+          }
         }
       }
     }
